--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "routesDB.js",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "http": "^0.0.0",
     "mysql": "^2.13.0",
