--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "nodemon": "^1.11.0"
   },
   "scripts": {
-    "dev": "nodemon server.js",
+    "crud": "nodemon server.js",
     "start": "crud.ejs"
   },
   "author": "PADM $ MP",
